--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <button type="button " class="btn btn-outline-light download-button"><i class="fab fa-google-play"></i> Download</button>
         </div>
         <div class="col-lg-6">
-          <img class="m-img" src="E:\Sparks-task1-main\Sparks-task1-main\logo.png" alt="mobilebanking">
+          <img class="m-img" src="logo.png" alt="mobilebanking">
 
         </div>
       </div>
