--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
         <div class="carousel-inner">
           <div class="carousel-item active container-fluid">
             <h2 class="testimonial-text">24*7 Customer Service</h2>
-            <img class="testimonial-image" src="E:\Sparks-task1-main\Sparks-task1-main\depositphotos_10541235-stock-photo-opening-hours.jpg" alt="customerservice profile">
+            <img class="testimonial-image" src="depositphotos_10541235-stock-photo-opening-hours.jpg" alt="customerservice profile">
           </div>
           <div class="carousel-item container-fluid">
             <h2 class="testimonial-text">Good People banking with</h2>
-            <img class="testimonial-image" src="E:\Sparks-task1-main\Sparks-task1-main\4850176611057664.jpg" alt="banking">
+            <img class="testimonial-image" src="4850176611057664.jpg" alt="banking">
           </div>
         </div>
         <a class="carousel-control-prev" href="#testimonial-carousel" role="button" data-slide="prev">
